get favorite artists controller and template, delete mapping for favorite artists

--- a/app/src/main/resources/templates/search.html
+++ b/app/src/main/resources/templates/search.html
@@ -83,9 +83,17 @@
                 <input type="hidden" th:value="${track.id}" name="id" />
                 <input type="hidden" th:value="${track.name}" name="name" />
                 <th:block th:each="artist, artistIter : ${track.artists}">
-                  <input type="hidden" th:value="${artist.id}" th:name="'artists[' + ${artistIter.index} + '].id'"/>
-                  <input type="hidden" th:value="${artist.name}" th:name="'artists[' + ${artistIter.index} + '].name'"/>
-              </th:block>
+                  <input
+                    type="hidden"
+                    th:value="${artist.id}"
+                    th:name="'artists[' + ${artistIter.index} + '].id'"
+                  />
+                  <input
+                    type="hidden"
+                    th:value="${artist.name}"
+                    th:name="'artists[' + ${artistIter.index} + '].name'"
+                  />
+                </th:block>
                 <input type="submit" value="Add" />
               </form>
             </td>
