--- a/app/src/main/resources/templates/favorites.html
+++ b/app/src/main/resources/templates/favorites.html
@@ -15,34 +15,82 @@
     <script th:src="@{webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
   </head>
   <body>
-      <div th:if="${artists != null}">
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Name</th>
-                <th scope="col">Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr th:each="artist, iter : ${artists}">
-                <th scope="row"><span th:text="${iter.index + 1}"></span></th>
-                <td><span th:text="${artist.name}"></span></td>
-                <td>
-                  <form
-                    action="#"
-                    th:action="@{/artist}"
-                    th:object="${removeArtist}"
-                    th:method="delete"
-                  >
-                    <input type="hidden" th:value="${artist.id}" name="id" />
-                    <input type="hidden" th:value="${artist.name}" name="name" />
-                    <input type="submit" value="Remove" />
-                  </form>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+    <div th:if="${artists != null}">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr th:each="artist, iter : ${artists}">
+            <th scope="row"><span th:text="${iter.index + 1}"></span></th>
+            <td><span th:text="${artist.name}"></span></td>
+            <td>
+              <form
+                action="#"
+                th:action="@{/artist}"
+                th:object="${removeArtist}"
+                th:method="delete"
+              >
+                <input type="hidden" th:value="${artist.id}" name="id" />
+                <input type="hidden" th:value="${artist.name}" name="name" />
+                <input type="submit" value="Remove" />
+              </form>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div th:if="${tracks != null}">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Artists</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr th:each="track, iter : ${tracks}">
+            <th scope="row"><span th:text="${iter.index + 1}"></span></th>
+            <td><span th:text="${track.name}"></span></td>
+            <td>
+              <ul th:each="artist : ${track.artists}">
+                <li><span th:text="${artist.name}"></span></li>
+              </ul>
+            </td>
+            <td>
+              <form
+                action="#"
+                th:action="@{/track}"
+                th:object="${removeTrack}"
+                th:method="delete"
+              >
+                <input type="hidden" th:value="${track.id}" name="id" />
+                <input type="hidden" th:value="${track.name}" name="name" />
+                <th:block th:each="artist, artistIter : ${track.artists}">
+                  <input
+                    type="hidden"
+                    th:value="${artist.id}"
+                    th:name="'artists[' + ${artistIter.index} + '].id'"
+                  />
+                  <input
+                    type="hidden"
+                    th:value="${artist.name}"
+                    th:name="'artists[' + ${artistIter.index} + '].name'"
+                  />
+                </th:block>
+                <input type="submit" value="Remove" />
+              </form>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
