--- a/app/src/main/resources/templates/logs.html
+++ b/app/src/main/resources/templates/logs.html
@@ -11,7 +11,6 @@
       rel="stylesheet"
       th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}"
     />
-    <link rel="stylesheet" th:href="@{/css/Log.css}" />
     <script th:src="@{webjars/jquery/3.3.1/jquery.min.js}"></script>
     <script th:src="@{webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
   </head>
@@ -30,7 +29,7 @@
             <tbody>
               <tr th:each="log : ${logs}">
                 <td><span th:text="${log.method}"></span></td>
-                <td><span th:text="${log.message}"></span></td>
+                <td style ="word-break:break-all;"><span th:text="${log.message}"></span></td>
                 <td><span th:text="${log.date}"></span></td>
               </tr>
             </tbody>
