--- a/app/src/main/resources/templates/search.html
+++ b/app/src/main/resources/templates/search.html
@@ -13,8 +13,16 @@
     />
     <script th:src="@{webjars/jquery/3.3.1/jquery.min.js}"></script>
     <script th:src="@{webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
+    <div th:insert="fragments/header"></div>
+
     <form action="#" th:action="@{/search}" method="GET">
       <input type="text" th:name="query" autocomplete="off" />
       <select th:name="type">
