--- a/app/src/main/resources/templates/fragments/header.html
+++ b/app/src/main/resources/templates/fragments/header.html
@@ -42,7 +42,7 @@
             th:action="@{/logout}"
             method="POST"
           >
-            <button class="btn btn-light" type="submit">
+            <button class="btn btn-primary" type="submit">
               <i class="fas fa-sign-out-alt"></i>
             </button>
           </form>
