--- a/app/src/main/resources/templates/search.html
+++ b/app/src/main/resources/templates/search.html
@@ -32,12 +32,13 @@
                 id="query"
                 th:name="query"
                 autocomplete="off"
+                th:value="${queryInput}"
               />
             </div>
             <div class="form-group">
               <select class="form-control" th:name="type">
-                <option value="artist">Artist</option>
-                <option value="track">Track</option>
+                <option th:selected="${typeInput == 'artist'}" value="artist">Artist</option>
+                <option th:selected="${typeInput == 'track'}" value="track">Track</option>
               </select>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
