--- a/app/src/main/resources/templates/fragments/header.html
+++ b/app/src/main/resources/templates/fragments/header.html
@@ -5,8 +5,22 @@
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
     crossorigin="anonymous"
   />
+
+  <link th:href="@{css/navbar.css}" rel="stylesheet" type="text/css" />
+
+  <link
+    rel="stylesheet"
+    type="text/css"
+    href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css"
+  />
+
+  <script
+    type="text/javascript"
+    charset="utf8"
+    src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"
+  ></script>
 </head>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" href="/">
     <i class="fas fa-music"></i>
     Spotify Favorites
