--- a/app/src/main/resources/templates/logs.html
+++ b/app/src/main/resources/templates/logs.html
@@ -13,6 +13,11 @@
     />
     <script th:src="@{webjars/jquery/3.3.1/jquery.min.js}"></script>
     <script th:src="@{webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
+    <script>
+      $(document).ready(() => {
+        $("#logs-table").DataTable();
+      });
+    </script>
   </head>
   <body>
     <div th:insert="fragments/header"></div>
@@ -20,9 +25,9 @@
     <div class="container">
       <div class="row mt-2">
         <div class="col-12">
-        <h2 class="text-center">Logs</h2>
+          <h2 class="text-center">Logs</h2>
 
-          <table class="table">
+          <table id="logs-table" class="table">
             <thead>
               <tr>
                 <th scope="col">Method</th>
