--- a/app/src/main/resources/templates/search.html
+++ b/app/src/main/resources/templates/search.html
@@ -48,7 +48,7 @@
       <div class="row mt-2">
         <div class="col-12">
           <div th:if="${artists != null}">
-            <table class="table">
+            <table class="table table-striped">
               <thead>
                 <tr>
                   <th scope="col">#</th>
@@ -86,7 +86,7 @@
       <div class="row mt-2">
         <div class="col-12">
           <div th:if="${tracks != null}">
-            <table class="table">
+            <table class="table table-striped">
               <thead>
                 <tr>
                   <th scope="col">#</th>
