--- a/app/src/main/resources/templates/favorites.html
+++ b/app/src/main/resources/templates/favorites.html
@@ -28,7 +28,7 @@
         <div class="col-12">
           <h2 class="text-center">Favorite Artists</h2>
 
-          <table id="artist-table" class="table">
+          <table id="artist-table" class="table table-striped">
             <thead>
               <tr>
                 <th scope="col">#</th>
@@ -60,7 +60,7 @@
         <div class="col-12">
           <h2 class="text-center">Favorite Tracks</h2>
 
-          <table id="tracks-table" class="table">
+          <table id="tracks-table" class="table table-striped">
             <thead>
               <tr>
                 <th scope="col">#</th>
