--- a/app/src/main/resources/templates/logs.html
+++ b/app/src/main/resources/templates/logs.html
@@ -27,7 +27,7 @@
         <div class="col-12">
           <h2 class="text-center">Logs</h2>
 
-          <table id="logs-table" class="table">
+          <table id="logs-table" class="table table-striped">
             <thead>
               <tr>
                 <th scope="col">Method</th>
