--- a/app/src/main/resources/templates/search.html
+++ b/app/src/main/resources/templates/search.html
@@ -13,7 +13,6 @@
     />
     <script th:src="@{webjars/jquery/3.3.1/jquery.min.js}"></script>
     <script th:src="@{webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
-
   </head>
   <body>
     <div th:insert="fragments/header"></div>
@@ -21,7 +20,7 @@
     <div class="container ">
       <div class="row mt-2">
         <div class="col-4 mx-auto">
-        <h2 class="text-center">Search Spotify</h2>
+          <h2 class="text-center">Search Spotify</h2>
 
           <form action="#" th:action="@{/search}" method="GET">
             <div class="form-group">
@@ -37,8 +36,12 @@
             </div>
             <div class="form-group">
               <select class="form-control" th:name="type">
-                <option th:selected="${typeInput == 'artist'}" value="artist">Artist</option>
-                <option th:selected="${typeInput == 'track'}" value="track">Track</option>
+                <option th:selected="${typeInput == 'artist'}" value="artist"
+                  >Artist</option
+                >
+                <option th:selected="${typeInput == 'track'}" value="track"
+                  >Track</option
+                >
               </select>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
